--- a/css/store-front-okku-style.css
+++ b/css/store-front-okku-style.css
@@ -39,6 +39,7 @@ ul, li {
 
 .mainContent {
     margin-top: 0px;
+	    border-top: 2px solid #1986b7;
     margin-bottom: 25px;
     display: inline-block;
     width: 100%;
