--- a/css/store-front-okku-style.css
+++ b/css/store-front-okku-style.css
@@ -7,7 +7,17 @@ body {
     overflow-x: hidden;
     color: #2b2b2b;
 }
-
+.estorepower-content h1 {
+    margin-top: -20px;
+    font-size: 30px;
+    border-left: 4px solid blue;
+    border-bottom: 1px solid #ccc;
+    padding-left: 10px;
+    text-transform: uppercase;
+}
+.estorepower-content p {
+font-size: 16px;
+}
 input, select, textarea, button {
     font-family: 'Open Sans', sans-serif;
 }
