--- a/css/store-front-okku-style.css
+++ b/css/store-front-okku-style.css
@@ -12,7 +12,7 @@ body {
     color: #00000c;
     margin-bottom: 10px;
     width: 100%;
-    background: #ccc;
+    background: #f8f8f8;
     display: inline-block;
     padding: 10px;
 }
@@ -719,7 +719,7 @@ table.v4clp li.v4f a, table.v4clp td.oc li a {
     color: #333;
     padding: 10px 10px;
     display: inline-block;
-    font-size: 14px;
+    font-size: 15px;
 }
 
 table.v4acpcont {
@@ -730,37 +730,10 @@ table.v4clp li span, table.v4clp td.oc li span {
     color: #333;
     font-weight: bold;
     color: #fc1605;
-    padding: 10px 34px;
+    padding: 10px 10px;
     display: inline-block;
-    font-size: 14px;
-    font-family: 'Lato', sans-serif;
+    font-size: 15px;
 }
-
-table.v4clp li span:before, table.v4clp td.oc li span:before {
-    content: "";
-    background: url(../images/right-arrow.png);
-    width: 12px;
-    height: 12px;
-    display: inline-block;
-    background-size: 12px;
-    margin-right: 6px;
-    position: relative;
-    top: 1px;
-}
-
-table.v4clp li.v4f a:before,
-table.v4clp td.oc li a:before {
-    content: "";
-    background: url(../images/right-arrow.png);
-    width: 12px;
-    height: 12px;
-    display: inline-block;
-    background-size: 12px;
-    margin-right: 6px;
-    position: relative;
-    top: 1px;
-}
-
 table.v4clp li.v4f a:hover,
 table.v4clp td.oc li a:hover {
     color: #fc1605;
@@ -773,7 +746,7 @@ table.v4clp td.oc li a:hover {
 table.v4acp tr.v4acp_head td.v4title font {
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 15px;
     color: #1a29bb;
     display: inline-block;
     width: 100%;
@@ -783,7 +756,7 @@ table.v4acp tr.v4acp_head td.v4title font {
 .v4topleft .heading {
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 15px;
     margin-bottom: 5px;
     color: #1a29bb;
     letter-spacing: 2px;
